# QRhi-Example

./: .gitignore  CMakeLists.txt  CMakeSettings.json
LibQrhiExample/: CMakeLists.txt  CMakeSettings.json  main.cpp  rhiwindow.cpp  rhiwindow.h
QrhiWrapper/: CMakeLists.txt  CMakeSettings.json  pyproject.toml  requirements.txt  testwindow.py
QrhiWrapper/sip/RhiWindow/: RhiWindowmod.sip
QrhiWrapper/sip/Rhiwindow/: RhiWindow.sip
TestRhiWindow/: CMakeLists.txt  main.cpp
